app/static/style.css
@import url("/static/jquery-ui-1.12.1.custom/jquery-ui.css");

body { 
	background-color: #ffe7d0;
	}
h1,h2,h3,a 	{ 
	text-decoration: none; 
	color: #6f4e37;
	font-family: serif}
h1, h2, {
	border-bottom: 2px solid #eee;
	padding: 3px; }
h3	{ 
	padding: 3px; }
svg { 
	border: 5px solid #6f4e37; 
	padding: 10px; }
.page				{
					margin: 10%;
					margin-top: 5%;
					padding: 2%;
					min-width: 75%; 
					border: 5px 
					solid #6f4e37; 
					background: #ffffea;
					display: flex;
					flex-wrap: wrap;
					justify-content: space-evenly;
					align-items: flex-end;
					}
.header				{
					padding: 10px;
					min-width:95%;
					display: flex;
					flex-wrap: wrap;
					justify-content: space-evenly;
					align-items: flex-end;
					}
.main				{
					padding: 0.8em;
					display: flex;
					flex-wrap: wrap;
					justify-content: space-evenly;
					align-items: flex-start; 
					padding: 2%;
					}	
.text_body			{
					padding: 0.8em; 
					}

.chart				{
					padding: 0.8em; 
					}
.metanav			{ font-size: 0.8em; 
					padding: 0.3em;}
.flash				{
					min-width: 95%; 
					background: #E1F0B7; 
					padding: 0.5em; 
					border: 1px solid #627138; }
.error				{ background: #f0d6d6; 
					padding: 0.5em; }
.utils				{
					display: flex;
					flex-wrap: nowrap;
					min-width:22%;
					padding: 5px; 
					margin: 10%;
					}

.root_node			{
					stroke: none;
					fill: none;
					}

.collapsedroot_node	{
					stroke: none;
					fill: none;
					}

.textroot_node		{
					stroke: none;
					fill: none;
					}

.countroot_node		{
					stroke: black;
					fill:black;
					}

.Country, .Region, .Farm, .Plot, .Block{
					stroke: black;
					fill: green ;
					fill-opacity:0.4
					}

.collapsedCountry, .collapsedRegion, .collapsedFarm, .collapsedPlot{
					stroke: green;
					fill: green;
					fill-opacity:0.8
					}


.textCountry, .textRegion, .textFarm, .textPlot{
					stroke: black;
					fill: black;
					fill-opacity:1
					}

.countCountry, .countRegion, .countFarm, .countPlot{
					stroke: black;
					fill: black;
					fill-opacity:1;
					}

.Trees{
					stroke: black;
					fill: brown;
					fill-opacity:0.8
					}
.Samples{
					stroke: black;
					fill: yellow;
					fill-opacity:0.8
					}
.Trait{
					stroke: black;
					fill: orange;
					fill-opacity:0.8
					}
.Data{
					stroke: red;
					fill: red;
					fill-opacity:0.8
					}
				
.link { stroke: #999; stroke-opacity: 1; stroke-width: 2px; fill:none; }

